--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header clearfix">
       <div class="container">
         <nav class="main-navigation">
           <ul>
@@ -35,13 +35,14 @@
         </div>
       </div>
     </header>
-    <main class="container">
-        <h1 class="item-name">Средства для ухода</h1>
+    <main class="container clearfix">
         <div class="breadcrumbs">
+            <h1 class="item-name">Средства для ухода</h1>
             <a href="#" class="main-breadcrumbs">Главная</a> 
             <a href="#" class="main-breadcrumbs">Магазин</a>  
             <a href="#" class="main-breadcrumbs">Средства для ухода</a> 
         </div >
+        <div class="container clearfix">
         <div class="content-left-shop">
            <form action="URL" method="post"> 
                <p>Производители:</p>:<br>
@@ -61,7 +62,7 @@
          </form> 
             <a href="#">Показать</a>
          </div>
-         <div class="content-right-shop">
+         <div class="content-right-shop ">
             <article class="product">
               <img src="img/Layer%2038.png" alt="Baxter of California" width="220" height="165">
                 <h3>Набор для путешествий <br>
@@ -118,9 +119,11 @@
              <a href="#" class="page button">3</a>
              <a href="#" class="page button">4</a>
          </div>
+        </div>
     </main>  
-    <footer class="main-footer">
-       <div class="footer-contacts">
+    <footer class="main-footer clearfix">
+      <div class="container clearfix">
+        <div class="footer-contacts">
          <p> Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
@@ -136,6 +139,7 @@
         <div class="footer-copyright">
           <p>Разработано:</p>
           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </div>
         </div>
       </footer>
   </body>
