--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <nav class="main-navigation">
           <ul>
             <li>
@@ -32,8 +32,8 @@
         </div>
       </div>
     </header>
-      <main class="container">
-        <div class="index-logo">
+      <main class="container clearfix">
+        <div class="index-logo clearfix">
             <img  src="img/BORODINSKI%20Logo.png" alt="Барбершоп Бородинский" height="204" width="368">
         </div>
         <section class="features">
@@ -50,7 +50,7 @@
               <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
           </div>
           </section>  
-          <div class="index-content">
+          <div class="index-content clearfix">
               <div class="index-content-left">
                   <h2 class="index-content-title">Новости</h2>
                   <ul class="new-preview">
@@ -77,7 +77,7 @@
               
               </div>
           </div>
-          <div class="index-content">
+          <div class="index-content clearfix">
             <div class="index-content-left">
               <h2 class="index-content-title">Контактная информация</h2>
                 <p>
@@ -106,7 +106,8 @@
             </div>
           </div>
       </main>
-      <footer class="main-footer">
+      <footer class="main-footer ">
+          <div class="container clearfix">
        <div class="footer-contacts">
          <p> Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -124,6 +125,7 @@
           <p>Разработано:</p>
           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
         </div>
+          </div>
       </footer>
   </body>
 </html>
