--- a/item.html
+++ b/item.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header clearfix">
       <div class="container">
         <nav class="main-navigation">
           <ul>
@@ -35,9 +35,9 @@
         </div>
       </div>
     </header>
-    <main class="container">
-        <h1 class="item-name">Набор для путешествий «Baxter of California»</h1>
+    <main class="container clearfix">
         <div class="breadcrumbs">
+        <h1 class="item-name">Набор для путешествий «Baxter of California»</h1>
             <a href="#" class="main-breadcrumbs">Главная</a> 
             <img src="img/bread-icon.png" alt="+" width="18" height="16"> 
             <a href="#" class="main-breadcrumbs">Магазин</a> 
@@ -79,6 +79,7 @@
         </div>
     </main>  
     <footer class="main-footer">
+        <div class="container clearfix">
        <div class="footer-contacts">
          <p> Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -95,6 +96,7 @@
         <div class="footer-copyright">
           <p>Разработано:</p>
           <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </div>
         </div>
       </footer>
   </body>
